# Sargam

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
CMakeModules/: AddComponent.cmake  Qt5.cmake
ThirdParties/OpenSsl/: ReadMe.txt
projects/sargam/: CMakeLists.txt  Commands.cpp  Commands.h  Dialogs.cpp  Dialogs.h  MainDialog.cpp  MainDialog.h  PartitionViewer.cpp  PartitionViewer.h  Updater.cpp  Updater.h  data.cpp  data.h  main.cpp  sargam.rc
projects/sargam/artwork/: dockIcon.icns
projects/sargam/from reddit/: notes
projects/sargam/installer/mac/: buildAndDeployMac.sh
projects/sargam/installer/windows7/: buildAndCreateInstaller.bat  windowsInstaller.iss
projects/sargam/releaseNotes/: sargamReleaseNotes-preprod.txt  sargamReleaseNotes.txt
projects/sargam/utils/: Command.h  CommandStack.cpp  CommandStack.h  Statistics.cpp  Statistics.h  Timer.cpp  Timer.h  log.cpp  log.h  utilities.cpp  utilities.h
projects/sargam/web/: error.html  index.html  notes.txt  sargamUsageCounter.html
